DEV-044 keep test collection access simple